# SystemView

./: .gitignore  AGENTS.md  LICENSE  README.md
RTT/: CMakeLists.txt  README.md  SEGGER.RTT.pdsc  build.sh  gen_pack.sh
RTT/Config/: SEGGER_RTT_Conf.h
RTT/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
RTT/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_ASM_ARMv7M.S  SEGGER_RTT_ConfDefaults.h  SEGGER_RTT_printf.c
RTT/SEGGER/: Global.h
RTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
RTT/Tests/: SEGGER_RTT_PublicAPI_Test.c
SystemView/: CMakeLists.txt  LICENSE.md  README.md  SEGGER.SystemView.pdsc  build.sh  gen_pack.sh
SystemView/Config/: Global.h  SEGGER_SYSVIEW_Conf.h
SystemView/SEGGER/: SEGGER.h
SystemView/SYSVIEW/: SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Int.h  SEGGER_SYSVIEW_Version.h
SystemView/Sample/COMM/: SEGGER_SYSVIEW_REC.c  SEGGER_SYSVIEW_REC.h
SystemView/Sample/COMM/IP/: SEGGER_SYSVIEW_COMM_IP_embOS_emNet.c
SystemView/Sample/COMM/UART/: SEGGER_SYSVIEW_Config_UART.c
SystemView/Sample/FreeRTOSV10/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
SystemView/Sample/FreeRTOSV10.4/: SEGGER_SYSVIEW_FreeRTOS.h
SystemView/Sample/FreeRTOSV11/: SEGGER_SYSVIEW_FreeRTOS.h
SystemView/Sample/FreeRTOSV8/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
SystemView/Sample/FreeRTOSV9/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
SystemView/Sample/MicriumOSKernel/: SEGGER_SYSVIEW_MicriumOSKernel.c
SystemView/Sample/NuttX/: SEGGER_SYSVIEW_NuttX.c  SEGGER_SYSVIEW_NuttX.h
SystemView/Sample/NuttX/Patch/: nuttx-8.2.diff
SystemView/Sample/embOS/: SEGGER_SYSVIEW_embOS.c  SEGGER_SYSVIEW_embOS.h  SEGGER_SYSVIEW_embOS_Ultra.c
SystemView/Sample/uCOS-II/: SEGGER_SYSVIEW_uCOSII.c  os_trace_events.h
SystemView/Sample/uCOS-II/Config/: os_cfg_trace.h
SystemView/Sample/uCOS-III/: SEGGER_SYSVIEW_uCOSIII.c  os_trace_events.h
SystemView/Sample/uCOS-III/Config/: os_cfg_trace.h
SystemView/Tests/: SEGGER_SYSVIEW_PublicAPI_Test.c
SystemView/Tests/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
TraceHub/: CLI.c  CLI.h  CMakeLists.txt  CMakePresets.json  CoreLogRecorder.c  Log.h  LogCollector.c  LogCollector.h  LogEntry.h  LogLineParser.c  README.md  RTTMemory.h  RTTMemory_memshm.c  SYS.c  Socket.h  SwimLaneRenderer.c  SystemView.h  Terminal.c  Utils.c  build.sh  main.c  run-console.sh  run-sysview.sh  run-terminal.sh
TraceHub/App/: CLI.c  CLI.h  Options.c  Options.h  OptionsApi.c  OptionsGetoptWin.c  OptionsParse.c  Options_internal.h  RunLoop.c  RunLoop.h  ServicePlan.c  ServicePlan.h  TraceHubDefaults.h  TraceHubSignal.c  TraceHubSignal.h  main.c
TraceHub/Core/: ByteQueue.c  ByteQueue.h  SYS.c  SYS.h  Utils.c  Utils.h
TraceHub/Log/: CoreLogRecorder.c  CoreLogRecorder.h  CoreLogRecorderConsumer.c  CoreLogRecorderFile.c  CoreLogRecorderRegistry.c  CoreLogRecorderRuntime.c  CoreLogRecorderSource.c  CoreLogRecorderState.c  CoreLogRecorderStats.c  CoreLogRecorder_internal.h  Log.c  Log.h  LogCollector.c  LogCollector.h  LogCollectorApi.c  LogCollectorConsumer.c  LogCollectorError.c  LogCollectorRuntime.c  LogCollectorSource.c  LogCollectorState.c  LogCollectorStorage.c  LogCollector_internal.h  LogEntry.c  LogEntry.h  LogFile.c  LogHexdump.c  LogLineParser.c  LogLineParser.h  LogMain.c  LogMerger.c  LogMerger.h  LogMergerApi.c  LogMergerBuffer.c  LogMergerFile.c  LogMergerOutput.c  LogMergerWatermark.c  LogMerger_internal.h  LogSwimLane.c  LogText.c  Log_internal.h  (+7 more)
TraceHub/Network/: Socket.c  Socket.h  TelnetCodec.c  TelnetCodec.h
TraceHub/RTT/: RTTBridge.c  RTTBridge.h  RTTBridgeApi.c  RTTBridgeChannel.c  RTTBridgeRegion.c  RTTBridgeState.c  RTTBridge_internal.h  RTTMemory.c  RTTMemory.h  RTTMemory_memshm.c  RTTMemory_smem.c
TraceHub/Scripts/: run-console.sh  run-smem-env-check.sh  run-sysview.sh  run-terminal.sh  tracehub-runner-common.sh
TraceHub/Services/: SystemView.c  SystemView.h  SystemViewHandshake.c  SystemViewRecord.c  SystemViewRuntime.c  SystemViewService.c  SystemViewState.c  SystemView_internal.h  Terminal.c  Terminal.h  TerminalConsole.c  TerminalRuntime.c  TerminalService.c  TerminalState.c  Terminal_internal.h
TraceHub/Tests/: CMakeLists.txt  LogCollectorTest.c  LogLineParserTest.c  RTTSimLinux.c  RTTSimRTOS.c  RTTSimSystemViewTCPClient.c  run-memshm-smoke.sh  run-smem-preflight.sh
TraceHub/Tests/Scripts/: run-log-checks.sh  run-memshm-smoke.sh  run-smem-preflight.sh  tracehub-log-checks.sh
TraceHub/Tests/Sim/: RTTSimCommon.h  RTTSimLinux.c  RTTSimRTOS.c  RTTSimSystemView.c  RTTSimSystemView.h  RTTSimSystemViewTCPClient.c
TraceHub/Tests/SystemViewConfig/: SEGGER_SYSVIEW_Conf.h
TraceHub/Tests/Unit/: AppApiTest.c  AppOptionsTest.c  AppRunLoopTest.c  AppServicePlanTest.c  CoreApiTest.c  CoreLogRecorderApiTest.c  LogApiTest.c  LogCollectorTest.c  LogEntryTest.c  LogLineParserTest.c  LogMergerTest.c  NetworkApiTest.c  RTTApiTest.c  RTTMemoryMemshmBackendTest.c  RTTMemorySmemBackendTest.c  ServicesApiTest.c  SwimLaneRendererTest.c  SystemViewApiTest.c  TerminalApiTest.c  TestCommon.c  TestCommon.h
TraceHub/test/: CMakeLists.txt  rtt_sim_common.h  rtt_sim_linux.c  rtt_sim_rtos.c  rtt_sim_sysview.c  rtt_sim_sysview.h  rtt_sim_sysview_tcp_client.c  run_memshm_smoke.sh  run_smem_preflight.sh  test_logcollector.c  test_logline_parser.c  test_logmerger.c
embOS/BoardSupport/Simulation/: .gitignore  CMakeLists.txt  ReadMe.txt  Start_Simulation.code-workspace  build.sh  lsan_gui.supp
embOS/BoardSupport/Simulation/Posix/: PosixMain.c  SIM_OS.c  SIM_OS.h
embOS/BoardSupport/Simulation/SEGGER/: SEGGER_RTT_Conf.h  SEGGER_RTT_Memory.h  SEGGER_RTT_Memory_Int.h  SEGGER_RTT_Memory_Posix.c  SEGGER_RTT_Memory_Win32.c  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_embOS_Posix.c  SEGGER_SYSVIEW_Config_embOS_Win32.c  SEGGER_SYSVIEW_embOS.c  SEGGER_SYSVIEW_embOS.h
embOS/BoardSupport/Simulation/Setup/: BSP.c  OS_ThreadSafe.c  RTOSInit.c  UDP_Sim_Process.c
(+1011 files in other folders)
